// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot for external link 1`] = `
<div>
  <a
    class="usa-link usa-link--external"
    href="/somewhere"
    rel="noopener noreferrer"
    target="_blank"
  >
    link text
  </a>
</div>
`;

exports[`should match snapshot for internal link 1`] = `
<div>
  <a
    class="usa-link"
    href="/somewhere"
  >
    link text
  </a>
</div>
`;
